[gd_scene load_steps=100 format=3 uid="uid://cp3othgqimikm"]

[ext_resource type="Script" uid="uid://b5c0umy868tnb" path="res://Scripts/CharacterScripts/morgan.gd" id="1_cvnsp"]
[ext_resource type="Texture2D" uid="uid://8d4yipr05fsr" path="res://Assets/MorganSprite.png" id="2_cvnsp"]
[ext_resource type="Script" path="res://Scripts/player_state_machine.gd" id="3_6olf2"]
[ext_resource type="Texture2D" uid="uid://c20acgrtqfuvp" path="res://Assets/Morgan_full.png" id="3_bu0xj"]
[ext_resource type="Texture2D" uid="uid://cwmwx7mdf6b2c" path="res://Assets/Morgan_stun1.png" id="3_qvlsx"]
[ext_resource type="Script" uid="uid://bin7fnsd50k4n" path="res://Scripts/state_idle.gd" id="4_lhtui"]
[ext_resource type="Script" uid="uid://bh854fw0antdg" path="res://Scripts/state_walk.gd" id="5_lhtui"]
[ext_resource type="Script" uid="uid://bxyd5mk1cgyh6" path="res://Scripts/state_attack.gd" id="7_8xnp4"]
[ext_resource type="Script" uid="uid://b3gujqfifojk" path="res://Scripts/CharacterScripts/PlayerInteractions.gd" id="8_1vmav"]
[ext_resource type="Script" uid="uid://17o00n3sw0b7" path="res://Scripts/state_stun.gd" id="8_ai170"]
[ext_resource type="PackedScene" uid="uid://qv23fwf8h5tv" path="res://Scenes/Generics/Hurtbox.tscn" id="9_4j4hc"]
[ext_resource type="Script" uid="uid://dh2hx5jh1b2b0" path="res://Scripts/Generics/hitbox.gd" id="10_4j4hc"]
[ext_resource type="Script" uid="uid://bxcxvn6uccgfx" path="res://Scripts/CharacterScripts/player_camera.gd" id="13_0hy25"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ss1u1"]
atlas = ExtResource("3_bu0xj")
region = Rect2(0, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_8v3r7"]
atlas = ExtResource("3_bu0xj")
region = Rect2(400, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gs0j"]
atlas = ExtResource("3_bu0xj")
region = Rect2(800, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ngsc"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1200, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_15buv"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1600, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckv22"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2000, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_es8wk"]
atlas = ExtResource("3_bu0xj")
region = Rect2(400, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_rv6yy"]
atlas = ExtResource("3_bu0xj")
region = Rect2(800, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_asxdw"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1200, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7hyu"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1600, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_mil1w"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2000, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgr6t"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2400, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_j815c"]
atlas = ExtResource("3_bu0xj")
region = Rect2(3600, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ooeu"]
atlas = ExtResource("3_bu0xj")
region = Rect2(4000, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_do3xy"]
atlas = ExtResource("3_bu0xj")
region = Rect2(800, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_2d0gh"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1200, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_vc1na"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1600, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_muati"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2000, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ji1hg"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2400, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_gr6sj"]
atlas = ExtResource("3_bu0xj")
region = Rect2(3200, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3873"]
atlas = ExtResource("3_bu0xj")
region = Rect2(3600, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_4flqf"]
atlas = ExtResource("3_bu0xj")
region = Rect2(4000, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_rem76"]
atlas = ExtResource("3_bu0xj")
region = Rect2(0, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_41pcp"]
atlas = ExtResource("3_bu0xj")
region = Rect2(400, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qifp3"]
atlas = ExtResource("3_bu0xj")
region = Rect2(800, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss5c2"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1200, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a7qq"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1600, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6604"]
atlas = ExtResource("3_bu0xj")
region = Rect2(3200, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_eveyc"]
atlas = ExtResource("3_bu0xj")
region = Rect2(3600, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_06icb"]
atlas = ExtResource("3_bu0xj")
region = Rect2(4000, 1200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_axxra"]
atlas = ExtResource("3_bu0xj")
region = Rect2(0, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1j2s"]
atlas = ExtResource("3_bu0xj")
region = Rect2(400, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0na2"]
atlas = ExtResource("3_bu0xj")
region = Rect2(800, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1fdr"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1200, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkth0"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1600, 1600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xnp4"]
atlas = ExtResource("3_bu0xj")
region = Rect2(0, 3200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hf1p"]
atlas = ExtResource("3_bu0xj")
region = Rect2(400, 3200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vmav"]
atlas = ExtResource("3_bu0xj")
region = Rect2(800, 3200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_4j4hc"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1200, 3200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai170"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1600, 3200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvlsx"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2000, 3200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hy25"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2400, 3200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecacd"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2800, 3200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_tavxo"]
atlas = ExtResource("3_bu0xj")
region = Rect2(3200, 3200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_085ji"]
atlas = ExtResource("3_bu0xj")
region = Rect2(3600, 3200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_q58q0"]
atlas = ExtResource("3_bu0xj")
region = Rect2(4000, 3200, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1a5v"]
atlas = ExtResource("3_bu0xj")
region = Rect2(0, 3600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft44d"]
atlas = ExtResource("3_bu0xj")
region = Rect2(800, 3600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_loef2"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1200, 3600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hiad"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1600, 3600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h8yg"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2000, 3600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ooqwm"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2400, 3600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnwil"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2800, 3600, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_px71x"]
atlas = ExtResource("3_bu0xj")
region = Rect2(800, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_r805r"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1200, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_i630a"]
atlas = ExtResource("3_bu0xj")
region = Rect2(1600, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_co30h"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2000, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifuns"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2400, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd0rm"]
atlas = ExtResource("3_bu0xj")
region = Rect2(2800, 2800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_d74w7"]
atlas = ExtResource("3_qvlsx")
region = Rect2(400, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ps0pg"]
atlas = ExtResource("3_qvlsx")
region = Rect2(800, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgrv8"]
atlas = ExtResource("3_qvlsx")
region = Rect2(400, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjh35"]
atlas = ExtResource("3_qvlsx")
region = Rect2(800, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rra6"]
atlas = ExtResource("3_qvlsx")
region = Rect2(400, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3ivr"]
atlas = ExtResource("3_qvlsx")
region = Rect2(800, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj1g2"]
atlas = ExtResource("2_cvnsp")
region = Rect2(2800, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_usbl8"]
atlas = ExtResource("2_cvnsp")
region = Rect2(3200, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_dtg1u"]
atlas = ExtResource("2_cvnsp")
region = Rect2(3600, 0, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuaet"]
atlas = ExtResource("2_cvnsp")
region = Rect2(0, 400, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqbau"]
atlas = ExtResource("2_cvnsp")
region = Rect2(1200, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5f5t"]
atlas = ExtResource("2_cvnsp")
region = Rect2(1600, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvbpb"]
atlas = ExtResource("2_cvnsp")
region = Rect2(2000, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_sscpr"]
atlas = ExtResource("2_cvnsp")
region = Rect2(2400, 800, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_by7i4"]
atlas = ExtResource("2_cvnsp")
region = Rect2(400, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_3uvy8"]
atlas = ExtResource("2_cvnsp")
region = Rect2(800, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss172"]
atlas = ExtResource("2_cvnsp")
region = Rect2(1200, 2000, 400, 400)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmelf"]
atlas = ExtResource("2_cvnsp")
region = Rect2(1600, 2000, 400, 400)

[sub_resource type="SpriteFrames" id="SpriteFrames_vgqql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss1u1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8v3r7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gs0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ngsc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15buv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckv22")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_es8wk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rv6yy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asxdw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7hyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mil1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgr6t")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j815c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ooeu")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_do3xy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2d0gh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vc1na")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muati")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ji1hg")
}],
"loop": true,
"name": &"run_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gr6sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3873")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4flqf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rem76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41pcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qifp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss5c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3a7qq")
}],
"loop": true,
"name": &"run_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6604")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eveyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06icb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axxra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1j2s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0na2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1fdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkth0")
}],
"loop": true,
"name": &"run_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xnp4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hf1p")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_1vmav")
}, {
"duration": 1.4,
"texture": SubResource("AtlasTexture_4j4hc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai170")
}],
"loop": false,
"name": &"slash_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvlsx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hy25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecacd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tavxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_085ji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q58q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1a5v")
}],
"loop": false,
"name": &"slash_right",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ft44d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loef2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hiad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h8yg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ooqwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnwil")
}],
"loop": false,
"name": &"slash_up",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_px71x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r805r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i630a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_co30h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifuns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd0rm")
}],
"loop": true,
"name": &"special_putItemInPocket",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d74w7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ps0pg")
}],
"loop": false,
"name": &"stun_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgrv8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjh35")
}],
"loop": false,
"name": &"stun_right",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rra6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3ivr")
}],
"loop": false,
"name": &"stun_up",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj1g2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usbl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dtg1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuaet")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqbau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5f5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvbpb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sscpr")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_by7i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3uvy8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss172")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmelf")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_efa38"]
radius = 2.0
height = 6.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p20tw"]
size = Vector2(2.5, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_qvlsx"]
radius = 3.5

[sub_resource type="CircleShape2D" id="CircleShape2D_ai170"]
radius = 5.0

[sub_resource type="Animation" id="Animation_ecacd"]
resource_name = "Default"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0hy25"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_qvlsx"]
resource_name = "Stun"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.603615, 0.753144, 0.900965, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.117647), Color(1, 1, 1, 1), Color(1, 1, 1, 0.27451), Color(1, 1, 1, 1), Color(1, 1, 1, 0.592157), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tavxo"]
_data = {
&"Default": SubResource("Animation_ecacd"),
&"RESET": SubResource("Animation_0hy25"),
&"Stun": SubResource("Animation_qvlsx")
}

[node name="Morgan" type="CharacterBody2D" groups=["Player"]]
z_index = 3
scale = Vector2(1.5, 1.5)
script = ExtResource("1_cvnsp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.075, 0.075)
sprite_frames = SubResource("SpriteFrames_vgqql")
animation = &"idle_down"
autoplay = "idle_down"

[node name="Walkbox" type="CollisionShape2D" parent="."]
position = Vector2(0, 6.333333)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_efa38")

[node name="PushBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="PushBoxCollisionShape" type="CollisionShape2D" parent="PushBox"]
position = Vector2(8.9407e-07, 2.75)
rotation = 1.5708
shape = SubResource("RectangleShape2D_p20tw")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_6olf2")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_lhtui")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_lhtui")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("7_8xnp4")
decelerate_speed = 8.0

[node name="Stun" type="Node" parent="StateMachine"]
script = ExtResource("8_ai170")
knockback_speed = 150.0

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0
monitoring = false
script = ExtResource("10_4j4hc")
metadata/_custom_type_script = "uid://dh2hx5jh1b2b0"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 3)
shape = SubResource("CircleShape2D_qvlsx")
debug_color = Color(0.545098, 0.556863, 0.247059, 0.729412)

[node name="Interactions" type="Node2D" parent="."]
script = ExtResource("8_1vmav")

[node name="Hurtbox" parent="Interactions" instance=ExtResource("9_4j4hc")]
collision_mask = 256
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactions/Hurtbox"]
position = Vector2(0, 10)
shape = SubResource("CircleShape2D_ai170")
debug_color = Color(0.929412, 0.164706, 0.0352941, 0.419608)

[node name="EffectAnimator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_tavxo")
}

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
editor_draw_limits = true
script = ExtResource("13_0hy25")

[connection signal="body_entered" from="PushBox" to="." method="_on_push_box_body_entered"]
